--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap");
 @import "reset.css";
 @import "header.css";
 @import "main.css";
@@ -11,10 +11,46 @@ body {
     background-color: #fff;
     font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 14px;
+    font-size: 17px;
+    font-weight: 300;
+    position: relative;
+}
+
+section {
+    margin-bottom: 10px;
+}
+
+i,
+header ul li {
+    cursor: pointer;
+}
+
+a {
+    all: unset;
+    cursor: pointer;
+    color: #0066cc;
+    font-size: 20px;
     font-weight: 400;
 }
 
-i {
-    cursor: pointer;
+a:last-child {
+    margin-left: 25px;
+}
+
+a::after {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f054";
+    font-size: 15px;
+    padding-left: 8px;
+    text-decoration: none;
+}
+
+a:hover::after,
+a:visited::after {
+    text-decoration: none;
+}
+
+a:hover span {
+    text-decoration: underline;
 }
