--- a/css/main.css
+++ b/css/main.css
@@ -75,25 +75,24 @@ section.main__third {
     background-repeat: no-repeat;
 }
 
-.main__third::after {
-    content: "Magic Keyboard coming in May";
-    font-size: 12px;
-    display: block;
-    position: absolute;
-    bottom: 3%;
-    left: 45%;
-    color: #86868b;
-}
-
 .main__third .third__product {
     width: 100%;
+    height: 700px;
     padding-top: 60px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
     z-index: 9999;
+    position: relative;
+}
+
+.main__third .third__product::after {
+    content: "Magic Keyboard coming in May";
+    font-size: 12px;
+    position: absolute;
+    bottom: 55px;
+    color: #86868b;
 }
 
 .third__product .product__name {
